# mdcorr

./: .gitignore  CMakeLists.txt  build.sh  c_api.cpp  mdcorr.cpp  mdcorr.h.in
array/: CMakeLists.txt  array.cpp  array.h
corr/: CMakeLists.txt  correlate.cpp  correlate.h
documentation/: notes.aux  notes.fdb_latexmk  notes.fls  notes.out  notes.tex  notes.toc  refs.bib
fft/: CMakeLists.txt  correlate.cpp  correlate.h  fft.cpp  fft.h
parse/: CMakeLists.txt  parse.cpp  parse.h
tests/: test_array.cpp  test_array_iter.cpp  test_array_mem.cpp  test_cli.cpp  test_correlate.cpp  test_fft.cpp  test_parallel.cpp  test_read.cpp  test_utils.cpp  test_valid_file.cpp
